--- a/style.css
+++ b/style.css
@@ -6,43 +6,40 @@ html, body {
       overflow: hidden;
   }
 body {
-   width: 100%;
-      height: 100%;
-      background: url(https://cdn.pixabay.com/photo/2017/11/09/20/40/texture-2934575_960_720.jpg); /* Путь к фоновому изображению */
-      background-color: rgba(0, 0, 0, .5);
-      background-size: 100%;
-      background-position: center;
-      text-align: center;
+  width: 100%;
+  height: 100%;
+  background: url(https://cdn.pixabay.com/photo/2017/11/09/20/40/texture-2934575_960_720.jpg); /* Путь к фоновому изображению */
+  background-color: rgba(0, 0, 0, .3);
+  -moz-background-size: cover; /* Firefox 3.6+ */
+  -webkit-background-size: cover; /* Safari 3.1+ и Chrome 4.0+ */
+  -o-background-size: cover; /* Opera 9.6+ */
+  background-size: cover; /* Современные браузеры */
+  background-position: center;
+  text-align: center;
 
 }
 input {
     height: 150px;
     width: 380px;
     box-shadow: 0 0 10px rgba(0,0,0,0.7);
-    position: absolute;
-    top: 5%;
+    top: 3%;
     left: 50%;
-    margin-left: -155px;
-    background: rgba(230, 225, 225, 0.65); /* фон кнопки */
-    font:66px "Trebuchet MS", Arial, Helvetica, sans-serif; 
+    margin-left: -180px; /** минус половина кнопки **/
+    background: rgba(230, 225, 225, 0.6); /* фон кнопки */
+    font:66px "Trebuchet MS", Arial, Helvetica, sans-serif;/*шрифт space ="" */
     font-weight:bold; 
-    padding:11px 32px;
+    position: absolute;
+    padding:22px 32px;
+    margin-bottom: 0;
   }
 
-form {
-     
-      text-align: center;
-      
-      
-  
-  
-}
-span {
-    position: absolute;
-    top: 25%;
-    left: 5%;
-    font-size: 50px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: whitesmoke;
-    text-shadow: 0px 0px 35px rgba(0, 0, 0, 0.99);
+
+div { /* вертикальный отступ текста сработал на P/div, span не работает */
+  margin-top: 199px; /*если margon-top в % - на мобильных намного ниже */
+  vertical-align: middle;
+  font-size: 66px;
+  color: white;
+  text-shadow: 0px 0px 10px rgb(0, 0, 0);
+  -webkit-text-stroke-width: 1.5px; /* толщина обводки */
+  -webkit-text-stroke-color: black; /* цвет обводки */
 }
