--- a/css.css
+++ b/css.css
@@ -1,3 +1,15 @@
+html {
+   -webkit-text-size-adjust : 100%;
+   text-size-adjust         : 100%
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 20px;
+    overflow-x: hidden;
+}
+
 h1 {
 	font-family: Roboto, sans-serif;
 	font-style: normal;
@@ -6,11 +18,9 @@ h1 {
 	line-height: 56px;
 	text-align: center;
 	color: #3C3C3C;
-
 }
 body {
 	background: #EDEDED;
-
 }
 
 summary {
@@ -29,8 +39,7 @@ summary {
 	font-size: 18px;
 	line-height: 24px;
 	color: #4D4646;
-	margin-left: 20px;
-
+	
 }
 
 .cooking {
@@ -39,23 +48,22 @@ summary {
 	font-weight: normal;
 	font-size: 18px;
 	color: #4D4646;
-	
 }
 
 .note {
-
-
-	width: 318px;
-	height: 406px;
+	position: relative;
+	width: 310px;
+	height: 180px;
 	background: #F8F8F8;
-	border-radius: 7px;
-	
+	margin: 30px;
 }
 
-.chekbox { 
-	  position: absolute;
-	  top: -9999px;
-	  left: -9999px;
-	  appearance: none;
-	  opacity: 0;
+.note p {
+	position: absolute;
+	top: 20%;
+	font-family: Poiret One;
+	font-style: normal;
+	font-size: 24px;
+	text-align: center;
+	color: #767676;
 }
