--- a/css.css
+++ b/css.css
@@ -4,9 +4,7 @@ html {
 }
 
 html, body {
-  /*  height: 100%;
-    width: 100%;*/
-    overflow-x: hidden;
+ 	overflow-x: hidden;
 	margin: 10px 5px ;
 }
 
@@ -44,7 +42,7 @@ summary {
 }
 
 .cooking {
-	font-family: Roboto Mono;
+	font-family: Roboto Slab;
 	font-style: normal;
 	font-weight: normal;
 	font-size: 18px;
