--- a/css.css
+++ b/css.css
@@ -109,3 +109,37 @@ ul {
 	top: 90%;
 	opacity: 0.44; 
    }
+
+#salateContent {
+	display: none;
+}
+
+#salatButton {
+	width: 49.2%;
+	height: 45px;
+	text-align:center; 
+	font-family: Roboto, sans-serif;
+	font-weight: 900;
+	font-size: 18px;
+	text-align: center;
+	margin-top: 5px;
+	
+
+ 
+
+}
+
+#mainButton {
+	width: 49.2%;
+	height: 45px;
+	text-align:center; 
+	font-family: Roboto, sans-serif;
+	font-style: bold;
+	font-size: 18px;
+	text-align: center;
+	margin-top: 5px;
+	font-weight: 900;
+	cursor: default;
+  }
+
+  #hei
