--- a/css.css
+++ b/css.css
@@ -123,7 +123,7 @@ ul {
 	font-size: 18px;
 	text-align: center;
 	margin-top: 5px;
-	
+	float: right;
 
  
 
@@ -134,12 +134,12 @@ ul {
 	height: 45px;
 	text-align:center; 
 	font-family: Roboto, sans-serif;
-	font-style: bold;
 	font-size: 18px;
 	text-align: center;
 	margin-top: 5px;
 	font-weight: 900;
-	cursor: default;
+	float: left;
   }
-
-  #hei
+hr {
+	margin-top: 6em;
+}
