--- a/css.css
+++ b/css.css
@@ -125,6 +125,7 @@ ul {
 	margin-top: 5px;
 	float: right;
 
+	border-color: #3C3C3C;
  
 
 }
@@ -139,7 +140,17 @@ ul {
 	margin-top: 5px;
 	font-weight: 900;
 	float: left;
+
+	border-color: #3C3C3C;
   }
 hr {
 	margin-top: 6em;
+}
+
+
+#music {
+	display: none;
+	position: absolute; 
+	left: 5%;
+	top: 5%;
 }
