--- a/css.css
+++ b/css.css
@@ -124,7 +124,7 @@ ul {
 	text-align: center;
 	margin-top: 5px;
 	float: right;
-
+	color: #3C3C3C;
 	border-color: #3C3C3C;
  
 
@@ -140,7 +140,7 @@ ul {
 	margin-top: 5px;
 	font-weight: 900;
 	float: left;
-
+	color: #3C3C3C;
 	border-color: #3C3C3C;
   }
 hr {
@@ -153,4 +153,9 @@ hr {
 	position: absolute; 
 	left: 5%;
 	top: 5%;
+}
+
+button:focus {
+	outline: none;
+	background-color: #cccaca;
 }
