--- a/css.css
+++ b/css.css
@@ -163,10 +163,20 @@ button:focus {
 
 button {
 /* Add shadows to create the "card" effect */
-box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
- 		transition: 0.3s;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+ 	transition: 0.3s;
 }
 /* On mouse-over, add a deeper shadow */
 button:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
+#logo {
+/* Add shadows to create the "card" effect */
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+ 	transition: 0.3s;
+}
+/* On mouse-over, add a deeper shadow */
+#logo:hover {
+  	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
